Add trainability state saving to functionality

--- a/models/covid_train2.ipynb
+++ b/models/covid_train2.ipynb
@@ -20,9 +20,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-09-07 10:44:00.192397: I tensorflow/core/util/port.cc:110] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2023-09-07 10:44:00.217911: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2023-09-07 10:44:00.627084: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "# os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"-1\" # Uncomment to disable GPU\n",
@@ -52,9 +63,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-09-07 10:44:01.292726: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:995] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-09-07 10:44:01.309847: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:995] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-09-07 10:44:01.309966: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:995] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-09-07 10:44:01.310934: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:995] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-09-07 10:44:01.311013: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:995] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-09-07 10:44:01.311060: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:995] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-09-07 10:44:01.633204: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:995] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-09-07 10:44:01.633326: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:995] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-09-07 10:44:01.633380: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:995] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-09-07 10:44:01.633430: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1639] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 21237 MB memory:  -> device: 0, name: NVIDIA RTX A5000, pci bus id: 0000:01:00.0, compute capability: 8.6\n"
+     ]
+    }
+   ],
    "source": [
     "model_name = \"covid19-1024examples\"\n",
     "\n",
@@ -93,12 +121,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['VitStructure', 'IreneStructure', 'SandyStructure']\n",
+      "{'d_model': 'required', 'd_val': 'required', 'd_key': 'required', 'd_ff': 'required', 'heads': 'required', 'dropout_rate': 'optional', 'regularizer': 'optional', 'initializer': 'optional', 'activation': 'optional', 'encoder_repeats': 'required', 'labels': 'required'}\n"
+     ]
+    }
+   ],
    "source": [
     "print(model.get_ml_model_structures())\n",
-    "print(model.get_ml_model_structure_hps(model.get_ml_model_structures()[1]))"
+    "print(model.get_ml_model_structure_hps(model.get_ml_model_structures()[0]))"
    ]
   },
   {
@@ -111,9 +148,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'coverage': 2, 'substitution_rate': 0.005, 'insertion_rate': 0.025, 'deletion_rate': 0.025, 'read_length': 128, 'frag_len': 128, 'num_frags': 256}\n"
+     ]
+    }
+   ],
    "source": [
     "print(model.get_ds_props())"
    ]
@@ -134,20 +179,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "coverage = 2\n",
-    "ml_model_depth = 1\n",
+    "ml_model_depth = 3\n",
     "sequencer_instrument = \"pacbio\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vit.3.2x.pacbio\n"
+     ]
+    }
+   ],
    "source": [
     "sequencer_instrument_to_error_profile_map = {\n",
     "    \"illumina\": {\n",
@@ -175,7 +228,7 @@
     "def get_model_name(ml_model_depth, coverage, sequencer_instrument):\n",
     "    if not sequencer_instrument in sequencer_instrument_to_error_profile_map:\n",
     "        raise Exception(f\"Invalid sequencer instrument: {sequencer_instrument}\")\n",
-    "    return f\"irene.{ml_model_depth}.{coverage}x.{sequencer_instrument}\"\n",
+    "    return f\"vit.{ml_model_depth}.{coverage}x.{sequencer_instrument}\"\n",
     "\n",
     "ml_model_name = get_model_name(ml_model_depth, coverage, sequencer_instrument)\n",
     "print(ml_model_name)"
@@ -193,15 +246,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model already exists\n"
+     ]
+    }
+   ],
    "source": [
     "newly_added = True\n",
     "# model.remove_ml_model(ml_model_name)\n",
     "try:\n",
     "    model.add_ml_model(ml_model_name, hps={\n",
-    "        \"structure\": model.get_ml_model_structures()[1],\n",
+    "        \"structure\": model.get_ml_model_structures()[0],\n",
     "        \"d_model\": model.get_ds_props()[\"frag_len\"],\n",
     "        \"d_val\": 128,\n",
     "        \"d_key\": 128,\n",
@@ -231,9 +292,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['vit.2.4x.pacbio', 'vit.2.2x.illumina', 'vit.2.1x.illumina', 'meow', 'vit.1.2x.pacbio', 'vit.1.4x.roche', 'vit.2.4x.roche', 'sandy.1.2x.pacbio', 'vit.2.2x.pacbio', 'vit.2.2x.roche', 'irene.1.2x.pacbio', 'vit.2.1x.roche', 'vit.3.2x.pacbio', 'vit.2.1x.pacbio', 'vit.2.4x.illumina', 'vit.3.1x.illumina', 'vit.1.4x.illumina']\n"
+     ]
+    }
+   ],
    "source": [
     "models = model.list_ml_models()\n",
     "print(models)"
@@ -241,35 +310,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "if newly_added:\n",
-    "    assert False, \"Please consider doing transfer learning\"\n",
-    "# model.transfer(get_model_name(ml_model_depth, coverage * 2, sequencer_instrument), ml_model_name, False)"
+    "#if newly_added:\n",
+    "#    assert False, \"Please consider doing transfer learning\"\n",
+    "# model.transfer(get_model_name(ml_model_depth-1, coverage, sequencer_instrument), ml_model_name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.change_ml_hps(ml_model_name, {\n",
-    "    # \"regularizer\": {\n",
-    "    #     \"name\": \"l2\",\n",
-    "    #     \"params\": {\n",
-    "    #         \"l2\": 0.00005,\n",
-    "    #     },\n",
-    "    # },\n",
-    "    \"optimizer\": {\n",
-    "        \"name\": \"AdamW\",\n",
-    "        \"params\": {\n",
-    "            \"learning_rate\": 0.005,\n",
-    "        },\n",
-    "    },\n",
-    "})"
+    "# model.change_ml_hps(ml_model_name, {\n",
+    "#     \"regularizer\": {        \"name\": \"l2\",\n",
+    "#       \"params\": {\n",
+    "#           \"l2\": 0.00002,\n",
+    "#       },\n",
+    "#    },\n",
+    "#    \"optimizer\": {\n",
+    "#        \"name\": \"AdamW\",\n",
+    "#       \"params\": {\n",
+    "#            \"learning_rate\": model.get_ml_hps(ml_model_name)[\"optimizer\"][\"params\"][\"learning_rate\"] * 0.5,\n",
+    "#        },\n",
+    "#    },\n",
+    "# })"
    ]
   },
   {
@@ -282,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,26 +369,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.set_ds_batch_size(256)\n",
+    "model.train(ml_model_name, epochs=1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def get_best_accuracy(coverage, sequencer_instrument):\n",
+    "#     print(glob.glob(f\"data/covid19-1024examples/ml_models/*.{coverage}x.{sequencer_instrument}\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "534/534 [==============================] - 757s 1s/step - loss: 5.2331 - accuracy: 0.0059 - auc: 0.4992 - val_loss: 5.1922 - val_accuracy: 0.0060 - val_auc: 0.5010\n",
-      "Epoch 2/1000\n",
-      "534/534 [==============================] - 740s 1s/step - loss: 5.1544 - accuracy: 0.0082 - auc: 0.5158 - val_loss: 4.9365 - val_accuracy: 0.0153 - val_auc: 0.6454\n",
-      "Epoch 3/1000\n",
-      "534/534 [==============================] - 741s 1s/step - loss: 4.4732 - accuracy: 0.0207 - auc: 0.7833 - val_loss: 4.2372 - val_accuracy: 0.0274 - val_auc: 0.8258\n",
-      "Epoch 4/1000\n",
-      "488/534 [==========================>...] - ETA: 1:00 - loss: 4.0354 - accuracy: 0.0338 - auc: 0.8614"
+      "Model: \"vit_structure\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " dense (Dense)               multiple                  5         \n",
+      "                                                                 \n",
+      " encoder (Encoder)           multiple                  857088    \n",
+      "                                                                 \n",
+      " encoder_1 (Encoder)         multiple                  857088    \n",
+      "                                                                 \n",
+      " encoder_2 (Encoder)         multiple                  857088    \n",
+      "                                                                 \n",
+      " softmax_dense (Dense)       multiple                  21543     \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 2592812 (9.89 MB)\n",
+      "Trainable params: 878631 (3.35 MB)\n",
+      "Non-trainable params: 1714181 (6.54 MB)\n",
+      "_________________________________________________________________\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-09-07 10:44:03.475211: I tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:606] TensorFloat-32 will be used for the matrix multiplication. This will only be logged once.\n",
+      "2023-09-07 10:44:03.567966: I tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:432] Loaded cuDNN version 8600\n"
      ]
     }
    ],
    "source": [
-    "model.set_ds_batch_size(256)\n",
-    "model.train(ml_model_name, epochs=1000)"
+    "model.get_model_summary(ml_model_name)"
    ]
   },
   {
