Fixing errors to support adding another architectures

--- a/models/covid_train.ipynb
+++ b/models/covid_train.ipynb
@@ -20,9 +20,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-01-17 13:29:42.704378: I tensorflow/core/util/port.cc:110] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2024-01-17 13:29:42.729414: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2024-01-17 13:29:43.144764: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "# os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"-1\" # Uncomment to disable GPU\n",
@@ -52,15 +63,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loading model\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-01-17 13:29:43.567881: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:995] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2024-01-17 13:29:43.583484: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:995] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2024-01-17 13:29:43.583603: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:995] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2024-01-17 13:29:43.584725: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:995] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2024-01-17 13:29:43.584803: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:995] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2024-01-17 13:29:43.584849: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:995] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2024-01-17 13:29:43.904955: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:995] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2024-01-17 13:29:43.905063: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:995] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2024-01-17 13:29:43.905126: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:995] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2024-01-17 13:29:43.905176: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1639] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 22325 MB memory:  -> device: 0, name: NVIDIA RTX A5000, pci bus id: 0000:01:00.0, compute capability: 8.6\n"
+     ]
+    }
+   ],
    "source": [
-    "model_name = \"covid19-1024examples\"\n",
+    "model_name = \"cov19-1024e\"\n",
     "\n",
     "try:\n",
+    "    print(\"loading model\")\n",
     "    model = load_model(model_name)\n",
     "except Exception:\n",
+    "    print(\"creating model\")\n",
     "    covid19_genome = Covid19Genome()\n",
     "    lineages = covid19_genome.getLocalLineages(1024)\n",
     "    lineages.sort()\n",
@@ -93,21 +130,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['VitStructure']\n",
-      "{'d_model': 'required', 'd_val': 'required', 'd_key': 'required', 'd_ff': 'required', 'heads': 'required', 'dropout_rate': 'optional', 'regularizer': 'optional', 'initializer': 'optional', 'activation': 'optional', 'encoder_repeats': 'required', 'labels': 'required'}\n"
+      "['VitStructure', 'IreneStructure', 'SandyStructure', 'ConvNextStructure']\n",
+      "{'labels': 'required', 'seq_len': 'required', 'd_model': 'required'}\n"
      ]
     }
    ],
    "source": [
     "print(model.get_ml_model_structures())\n",
-    "print(model.get_ml_model_structure_hps(model.get_ml_model_structures()[0]))"
+    "print(model.get_ml_model_structure_hps(model.get_ml_model_structures()[-1]))"
    ]
   },
   {
@@ -120,14 +157,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'coverage': 4, 'substitution_rate': 0.005, 'insertion_rate': 0.025, 'deletion_rate': 0.025, 'read_length': 128, 'frag_len': 128, 'num_frags': 256}\n"
+      "{'coverage': 4, 'substitution_rate': 0.005, 'insertion_rate': 0.001, 'deletion_rate': 0.001, 'read_length': 128, 'frag_len': 128, 'num_frags': 256}\n"
      ]
     }
    ],
@@ -151,18 +188,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "coverage = 2\n",
-    "ml_model_depth = 2\n",
-    "sequencer_instrument = \"pacbio\""
+    "coverage = 4\n",
+    "ml_model_depth = 1\n",
+    "sequencer_instrument = \"illumina\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,54 +246,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "newly_added = True\n",
-    "try:\n",
-    "    model.add_ml_model(ml_model_name, hps={\n",
-    "        \"structure\": model.get_ml_model_structures()[0],\n",
-    "        \"d_model\": model.get_ds_props()[\"frag_len\"],\n",
-    "        \"d_val\": 128,\n",
-    "        \"d_key\": 128,\n",
-    "        \"heads\": 8,\n",
-    "        \"d_ff\": 1024+256,\n",
-    "        \"labels\":  len(model.get_labels()),\n",
-    "        \"activation\": \"relu\",\n",
-    "        \"optimizer\": {\n",
-    "            \"name\": \"AdamW\",\n",
-    "            \"params\": {\n",
-    "                \"learning_rate\": 0.001,\n",
-    "            },\n",
-    "        },\n",
-    "        \"encoder_repeats\": ml_model_depth,\n",
-    "        \"regularizer\": {\n",
-    "            \"name\": \"l2\",\n",
-    "            \"params\": {\n",
-    "                \"l2\": 0.0001\n",
-    "            }\n",
-    "        },\n",
-    "        \"dropout\": 0.2,\n",
-    "    })\n",
-    "except:\n",
-    "    newly_added = False\n",
-    "    print(\"Model already exists\")"
+    "# newly_added = True\n",
+    "# try:\n",
+    "#    model.add_ml_model(ml_model_name, hps={\n",
+    "#        \"structure\": model.get_ml_model_structures()[-1],\n",
+    "#        \"d_model\": model.get_ds_props()[\"frag_len\"],\n",
+    "#        \"seq_len\": model.get_ds_props()[\"num_frags\"],\n",
+    "#        \"d_val\": 128,\n",
+    "#        \"d_key\": 128,\n",
+    "#        \"heads\": 8,\n",
+    "#        \"d_ff\": 1024+256,\n",
+    "#        \"labels\":  len(model.get_labels()),\n",
+    "#        \"activation\": \"relu\",\n",
+    "#        \"optimizer\": {\n",
+    "#            \"name\": \"AdamW\",\n",
+    "#            \"params\": {\n",
+    "#                \"learning_rate\": 0.001,\n",
+    "#            },\n",
+    "#        },\n",
+    "#        \"encoder_repeats\": ml_model_depth,\n",
+    "#        \"regularizer\": {\n",
+    "#            \"name\": \"l2\",\n",
+    "#            \"params\": {\n",
+    "#                \"l2\": 0.0001\n",
+    "#            }\n",
+    "#        },\n",
+    "#        \"dropout\": 0.2,\n",
+    "#    })\n",
+    "# except:\n",
+    "#     newly_added = False\n",
+    "#     print(\"Model already exists\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ml_model_name = \"convnext\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['vit.2.4x.pacbio', 'vit.2.1x.illumina', 'vit.1.4x.roche', 'vit.2.4x.roche', 'vit.2.2x.pacbio', 'vit.2.2x.roche', 'vit.2.1x.roche', 'vit.2.4x.illumina', 'vit.3.1x.illumina', 'vit.1.4x.illumina']\n"
+     "ename": "Exception",
+     "evalue": "ML model convnext already exists.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43madd_ml_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43mml_model_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mhps\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m{\u001b[49m\n\u001b[1;32m      2\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mstructure\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_ml_model_structures\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      3\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mseq_len\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_ds_props\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mnum_frags\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      4\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43md_model\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_ds_props\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mfrag_len\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      5\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mlabels\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_labels\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      6\u001b[0m \u001b[43m}\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/codehub/stable/active/vital/models/model.py:206\u001b[0m, in \u001b[0;36mModel.add_ml_model\u001b[0;34m(self, name, hps)\u001b[0m\n\u001b[1;32m    204\u001b[0m \u001b[38;5;66;03m# check if exists and return an appropriate error\u001b[39;00m\n\u001b[1;32m    205\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_ml_model_exists(name):\n\u001b[0;32m--> 206\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mML model \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m already exists.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    208\u001b[0m os\u001b[38;5;241m.\u001b[39mmakedirs(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_get_ml_models_path(), exist_ok\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m    210\u001b[0m \u001b[38;5;66;03m# prepare hps for the model\u001b[39;00m\n\u001b[1;32m    211\u001b[0m \n\u001b[1;32m    212\u001b[0m \u001b[38;5;66;03m# create the ml_model (creation also saves the model)\u001b[39;00m\n",
+      "\u001b[0;31mException\u001b[0m: ML model convnext already exists."
      ]
     }
    ],
+   "source": [
+    "model.add_ml_model(ml_model_name, hps={\n",
+    "    \"structure\": model.get_ml_model_structures()[-1],\n",
+    "    \"seq_len\": model.get_ds_props()[\"num_frags\"],\n",
+    "    \"d_model\": model.get_ds_props()[\"frag_len\"],\n",
+    "    \"labels\":  len(model.get_labels()),\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "models = model.list_ml_models()\n",
     "print(models)"
@@ -264,29 +330,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "if newly_added:\n",
-    "    assert False, \"Please consider doing transfer learning\"\n",
-    "# model.transfer(get_model_name(ml_model_depth, coverage * 2, sequencer_instrument), ml_model_name, False)"
+    "# if newly_added:\n",
+    "#     assert False, \"Please consider doing transfer learning\"\n",
+    "# # model.transfer(get_model_name(ml_model_depth, coverage * 2, sequencer_instrument), ml_model_name, False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-08-31 21:33:53.794933: I tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:606] TensorFloat-32 will be used for the matrix multiplication. This will only be logged once.\n",
-      "2023-08-31 21:33:53.888854: I tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:432] Loaded cuDNN version 8600\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# model.change_ml_hps(ml_model_name, {\n",
     "#     \"regularizer\": {\n",
@@ -314,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,28 +390,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "compiled the model with the following metrics: ['categorical_accuracy', 'AUC']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-01-17 13:29:50.623841: I tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:606] TensorFloat-32 will be used for the matrix multiplication. This will only be logged once.\n",
+      "2024-01-17 13:29:50.707469: I tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:432] Loaded cuDNN version 8600\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Epoch 1/1000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-01-17 13:29:58.663318: E tensorflow/core/grappler/optimizers/meta_optimizer.cc:954] layout failed: INVALID_ARGUMENT: Size of values 0 does not match size of permutation 4 @ fanin shape inefficientnetb0/block2b_drop/dropout/SelectV2-2-TransposeNHWCToNCHW-LayoutOptimizer\n",
+      "2024-01-17 13:30:04.877739: I tensorflow/compiler/xla/service/service.cc:168] XLA service 0x1e0729a0 initialized for platform CUDA (this does not guarantee that XLA will be used). Devices:\n",
+      "2024-01-17 13:30:04.877789: I tensorflow/compiler/xla/service/service.cc:176]   StreamExecutor device (0): NVIDIA RTX A5000, Compute Capability 8.6\n",
+      "2024-01-17 13:30:04.888333: I tensorflow/compiler/mlir/tensorflow/utils/dump_mlir_util.cc:255] disabling MLIR crash reproducer, set env var `MLIR_CRASH_REPRODUCER_DIRECTORY` to enable.\n",
+      "2024-01-17 13:30:05.048574: I ./tensorflow/compiler/jit/device_compiler.h:186] Compiled cluster using XLA!  This line is logged at most once for the lifetime of the process.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "551/601 [==========================>...] - ETA: 29s - categorical_accuracy: 0.2230 - loss: 2.8026"
      ]
     }
    ],
    "source": [
-    "model.set_ds_batch_size(320)\n",
+    "model.set_ds_batch_size(256)\n",
     "model.train(ml_model_name, epochs=1000)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -373,7 +456,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.17"
+   "version": "3.9.18"
   },
   "orig_nbformat": 4
  },
